test/cast/var_incomplete.vp
//! stage: run
//! expect-compile: error

struct Foo;         // forward declaration, incomplete

pub fn main() : uint32
{
    var x : Foo;         // error: cannot declare var of incomplete type
}